# OptiPharm

./: .gitignore  README.md  mkdocs.yml
OPTIPHARM/: .CHANGELOG.md.html  .gitignore  CMakeLists.txt  README.md
OPTIPHARM/gtestOP/: test_example.cpp  test_quaternions.cpp
OPTIPHARM/includeh/functions/: MoveAndRotate.h  Parameters.h  VolumeOverlap.h
OPTIPHARM/includeh/model/: Molecule.h
OPTIPHARM/includeh/read_write/: ReadMoleculeSD.h
OPTIPHARM/includeh/test/: MoveAndRotateMolTest.h  ReadMolAndCalculateOverlapTest.h
OPTIPHARM/includeh/uego/: master.h  nmol.h  searchsp.h  uegoini.h  usrintf.h
OPTIPHARM/libs/googletest/googletest/: Makefile  cmake_install.cmake
OPTIPHARM/src/functions/: Extras.cpp  MoveAndRotate.cpp  Parameters.cpp  VolumeOverlap.cpp
OPTIPHARM/src/model/: Atom.cpp  Bond.cpp  Molecule.cpp
OPTIPHARM/src/read_write/: ReadMolecule.cpp  WriteMolecule.cpp
OPTIPHARM/src/test/: AlignMolecule.cpp  MoleculeInfo.cpp  MoveRotateMolSave.cpp  ReadWriteMol2.cpp  calculateShapeSimilarity.cpp  testManageSpecies.cc
OPTIPHARM/src/uego/: master.cc  nmol.cc  speclist.cc
OPTIPHARM/src/uego/project/: molvalSS.cc  nrealopt.cc
OPTIPHARM/src/uego/usrintf/: main.cc
docs/: index.md
docs/Getting Started/: Donwload & Installation.md  Licensing.md  changelog.md
docs/Sugars/: OP_MRMS.md
